# facebook-claim-annotation

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
annotation_interface/: app.py  config.py  github_storage.py  guidelines.md
annotations/: annotator_01_annotations.jsonl  annotator_02_annotations.jsonl  annotator_03_annotations.jsonl  annotator_04_annotations.jsonl  annotator_05_annotations.jsonl  annotator_06_annotations.jsonl  annotator_07_annotations.jsonl  annotator_08_annotations.jsonl  annotator_10_annotations.jsonl
final_dataset/nepali/: nepali_data.json
final_dataset/telugu/: telugu_data.json
pilot_data_bangla/: pilot_data.json
pilot_data_nepali/: pilot_data.json
pilot_data_telugu/: pilot_data.json
