[project]
name = "facebook-claim-annotation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "blinker>=1.9.0",
    "certifi>=2023.5.7",
    "dnspython>=2.3.0",
    "pandas>=1.5.0",
    "pillow>=9.0.0",
    "pymongo[srv]>=4.3.3",
    "requests>=2.28.0",
    "streamlit>=1.28.0",
    "supabase>=2.17.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
]
